Fix input cart on Mobile

--- a/src/components/cart/buy/CartBuyOrder.module.scss
+++ b/src/components/cart/buy/CartBuyOrder.module.scss
@@ -36,6 +36,10 @@
     .loader-custom{
         margin: auto;
     }
+
+    @include screen(mobile){
+        padding: 10px 0 6px;
+    }
 }
 
 .cart-checkout{
